feat: 增强记忆与检索可观测性